# simple-editor

./: CMakeLists.txt  README.md  editorwindow.cpp  editorwindow.h  editorwindow.ui  main.cpp  objectsprocessing.h  objectwidget.cpp  objectwidget.h  propertyprocessing.h
custom_objects/: custom_object.h  json_object_reader.cpp  json_object_reader.h  json_object_writer.cpp  json_object_writer.h  object_processing.h  object_reader.h  object_writer.h
gui/: object_widget.cpp  object_widget.h  property_widget.cpp  property_widget.h  property_widget_factory.cpp  property_widget_factory.h
gui/property_widgets/: float_property_widget.cpp  float_property_widget.h  icon_property_widget.cpp  icon_property_widget.h  int_property_widget.cpp  int_property_widget.h  stringlist_property_widget.cpp  stringlist_property_widget.h
properties_config/: property_info.h  property_info_factory.cpp  property_info_factory.h  property_processing.cpp  property_processing.h
